adding erosita_eRASS1 catalog, for now conesearch works, but results are not used in voublazars

--- a/bin/cats1.ini
+++ b/bin/cats1.ini
@@ -90,7 +90,11 @@ descriptions: check the flux
 [eROSITA-EDR]
 url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=J%2FA+A%2F661%2FA1&
 columns:Name,RAcdeg,DEcdeg,ePosc,Ext,e_Ext,MLRate,e_MLRate,MLFlux,e_MLFlux,MLRateb1,MLRateb2,MLRateb3,MLRateb4,MLRates,MLRateh,MLRateu,e_MLRateb1,e_MLRateb2,e_MLRateb3,e_MLRateb4,e_MLRates,e_MLRateh,e_MLRateu,E_MLRateb1,E_MLRateb2,E_MLRateb3,E_MLRateb4,E_MLRates,E_MLRateh,E_MLRateu
-    
+
+[eROSITA-eRASS1]
+url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=J%2FA+A%2F682%2FA34&
+columns:IAUName,RA_ICRS,DE_ICRS,e_RA_ICRS,E_RA_ICRS,e_DE_ICRS,E_DE_ICRS,posErr,RADEErr,_tab1_22,_tab1_23,_tab1_24_
+
 [ZWCLUSTERS]
 url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=VII%2F190%2Fzg_ori&
 columns:ZG,_RA.icrs,_DE.icrs
