--- a/bin/cats1.ini
+++ b/bin/cats1.ini
@@ -93,7 +93,7 @@ columns:Name,RAcdeg,DEcdeg,ePosc,Ext,e_Ext,MLRate,e_MLRate,MLFlux,e_MLFlux,MLRat
 
 [eROSITA-eRASS1]
 url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=J%2FA+A%2F682%2FA34&
-columns:IAUName,RA_ICRS,DE_ICRS,e_RA_ICRS,E_RA_ICRS,e_DE_ICRS,E_DE_ICRS,posErr,RADEErr,_tab1_22,_tab1_23,_tab1_24_
+columns:IAUName,RA_ICRS,DE_ICRS,posErr,EXT,s_EXT,MLRate1,s_MLRate1,MLFlux1,s_MLFlux1,MLRateP1,MLRateP2,MLRateP3,MLRateP4,MLRateP5,MLRateP6,MLRateP7,e_MLRateP1,e_MLRateP2,e_MLRateP3,e_MLRateP4,e_MLRateP5,e_MLRateP6,e_MLRateP7,E_MLRateP1,E_MLRateP2,E_MLRateP3,E_MLRateP4,E_MLRateP5,E_MLRateP6,E_MLRateP7
 
 [ZWCLUSTERS]
 url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=VII%2F190%2Fzg_ori&
