--- a/bin/cats1.ini
+++ b/bin/cats1.ini
@@ -92,9 +92,14 @@ url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=J%2FA+A%2F661
 columns:Name,RAcdeg,DEcdeg,ePosc,Ext,e_Ext,MLRate,e_MLRate,MLFlux,e_MLFlux,MLRateb1,MLRateb2,MLRateb3,MLRateb4,MLRates,MLRateh,MLRateu,e_MLRateb1,e_MLRateb2,e_MLRateb3,e_MLRateb4,e_MLRates,e_MLRateh,e_MLRateu,E_MLRateb1,E_MLRateb2,E_MLRateb3,E_MLRateb4,E_MLRates,E_MLRateh,E_MLRateu
 
 [eROSITARASS1]
-url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=J%2FA+A%2F682%2FA34&
+url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=J%2FA+A%2F682%2FA34%2Ferass1-m&
 columns:IAUName,RA_ICRS,DE_ICRS,posErr,EXT,s_EXT,MLRate1,s_MLRate1,MLFlux1,s_MLFlux1,MLRateP1,MLRateP2,MLRateP3,MLRateP4,MLRateP5,MLRateP6,MLRateP7,MLRateP8,MLRateP9,e_MLRateP1,e_MLRateP2,e_MLRateP3,e_MLRateP4,e_MLRateP5,e_MLRateP6,e_MLRateP7,e_MLRateP8,e_MLRateP9,E_MLRateP1,E_MLRateP2,E_MLRateP3,E_MLRateP4,E_MLRateP5,E_MLRateP6,E_MLRateP7,E_MLRateP8,E_MLRateP9
 
+    
+[eRASS1-S]
+url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=J%2FA+A%2F682%2FA34%2Ferass1-s&
+columns:IAUName,RA_ICRS,DE_ICRS,posErr,EXT,s_EXT,MLRate1,e_MLRate1,MLFlux1,e_MLFlux1,MLRateP1,MLRateP2,MLRateP3,MLRateP4,MLRateP5,MLRateP6,MLRateP7,MLRateP8,MLRateP9,e_MLRateP1,e_MLRateP2,e_MLRateP3,e_MLRateP4,e_MLRateP5,e_MLRateP6,e_MLRateP7,e_MLRateP8,e_MLRateP9,E_MLRateP1,E_MLRateP2,E_MLRateP3,E_MLRateP4,E_MLRateP5,E_MLRateP6,E_MLRateP7,E_MLRateP8,E_MLRateP9,EXT
+    
 [ZWCLUSTERS]
 url:http://vizier.u-strasbg.fr/viz-bin/votable/-A?-out.all&-source=VII%2F190%2Fzg_ori&
 columns:ZG,_RA.icrs,_DE.icrs
